Fixed small layout problem on downloads page

--- a/themes/composr_homesite/css_custom/global.css
+++ b/themes/composr_homesite/css_custom/global.css
@@ -994,9 +994,10 @@ body .accessibility_hidden { /* Contents should be made visible (or interpreted)
 /* Commonly used to indicate there is no content to display */
 .nothing_here, .more_here {
 	font-size: 13px !important; /* px not em due to careful background positioning */
-	padding-{!en_left}: 15px;
+	padding-{!en_left}: 15px !important;
 	margin: 1.5em;
-	margin-{!en_left}: 10px;
+	margin-{!en_left}: 10px !important;
+	line-height: 15px !important;
 	background-image: url('{$IMG_INLINE;,1x/cannot_show}');
 	background-position: {!en_left} 5px;
 	background-repeat: no-repeat;
